# gboggle

./: README.md  config.h.in
branches/appdata/gboggle/: Makefile.am  Makefile.in  configure  configure.ac
branches/appdata/gboggle/src/: Makefile.am  board.h  board_widget.c  boggle.c  boggle.h  langconf.c  main.c  test.c  ui.c
branches/maemo/gboggle/dict/: Makefile.am
branches/maemo/gboggle/po/: hu.po
branches/maemo/gboggle/src/: appdata.h  board_widget.c  main.c  ui.c
branches/windows/gboggle/: AUTHORS
branches/windows/gboggle/data/: gbogglerc.in
branches/windows/gboggle/debian/: changelog
branches/windows/gboggle/po/: Makevars  POTFILES.in  de.po  hu.po  it.po  pl.po  ru.po
branches/windows/gboggle/src/: appdata.h  util.c  util.h
branches/windows/maemo/debian/: gboggle.postinst
gboggle/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
gboggle/data/: Makefile.am
gboggle/debian/: changelog  gboggle-dictionary-french.install  gboggle.install
gboggle/dict/: Makefile.am  Makefile.in  copyright
gboggle/po/: LINGUAS  fr.po  gboggle.pot  hu.po  ru.po
gboggle/src/: Makefile.am  appdata.h  board.c  board_widget.c  board_widget.h  boggle.c  boggle.h  gbogglerc  gbogglerc.in  langconf.c  main.c  ui.c  ui.h  util.h
maemo/debian/: changelog  control  rules
src/: Makefile.am  boggle.h
tags/1.0.0/gboggle/: ChangeLog  README  configure.ac
tags/1.0.0/gboggle/dict/: Makefile.am
tags/1.0.0/gboggle/src/: appdata.h  board_widget.c
tags/1.0.0rc1/gboggle/: config.h.in
tags/1.0.0rc1/gboggle/src/: board_widget.h  boggle.c  langconf.h
tags/1.1.0/gboggle/debian/: changelog  control  rules
tags/1.1.0/gboggle/po/: gboggle.pot
tags/1.1.0/gboggle/src/: langconf.c  ui.c  ui.h  util.c
tags/1.1.1/gboggle/po/: hu.po
tags/1.1.1/gboggle/src/: appdata.h
tags/1.1.2/gboggle/: ChangeLog  configure.ac
tags/1.1.2/gboggle/dict/: hungarian
tags/1.1.2/gboggle/po/: gboggle.pot  hu.po
tags/1.1.2/gboggle/src/: board_widget.h  gbogglerc.in  ui.c  util.h
tags/1.1.3/gboggle/: configure.ac
tags/1.1.3/gboggle/data/: gbogglerc.in
tags/1.1.3/gboggle/debian/: control  gboggle-dictionary-british.install  menu
tags/1.1.3/gboggle/dict/: french
tags/1.1.3/gboggle/po/: fr.po  hu.po
tags/1.1.3/gboggle/src/: board_widget.c  boggle.h  test.c
tags/1.1.3maemo3/gboggle/: ChangeLog
tags/1.1.3maemo3/gboggle/data/: gboggle.desktop.in  gbogglerc.in
tags/1.1.3maemo3/gboggle/debian/: changelog  gboggle-dictionary-hungarian.install
tags/1.1.3maemo3/gboggle/dict/: copyright
tags/1.1.3maemo3/gboggle/po/: fr.po  hu.po
tags/1.1.3maemo3/gboggle/src/: board.c  ui.h
tags/1.1.3maemo3/maemo/debian/: control
tags/1.1.4/gboggle/: AUTHORS  configure.ac
tags/1.1.4/gboggle/debian/: control
tags/1.1.4/gboggle/dict/: copyright
tags/1.1.4/gboggle/po/: LINGUAS
tags/1.1.4/gboggle/src/: Makefile.am  boggle.c  util.c
tags/1.1.4/maemo/debian/: control
trunk/gboggle/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  configure  configure.ac
trunk/gboggle/data/: Makefile.am  gbogglerc.in  gtkrc
trunk/gboggle/debian/: changelog  control  gboggle-dictionary-german.install
trunk/gboggle/dict/: Makefile.am  Makefile.in
trunk/gboggle/po/: LINGUAS  fi.po  fr.po  gboggle.pot  hu.po
trunk/gboggle/src/: Makefile.am  Makefile.in  appdata.h  board.c  board.h  board_widget.c  board_widget.h  boggle.c  gboggle.desktop.in  gbogglerc.in  langconf.c  main.c  test.c  ui.c  ui.h
trunk/maemo/: export-maemo-src.sh
trunk/maemo/debian/: changelog  copyright  gboggle.install
